feat: design function

--- a/Logica3/bandera/index2.html
+++ b/Logica3/bandera/index2.html
@@ -22,15 +22,21 @@
         pincel.strokeRect(x,y,50,50);
     }    
 
+    // let i=0;
+    // while(i<600){
+    //     dibujarCuadrado(i,0,"red");
+    //     dibujarCuadrado(i,50,"yellow");
+    //     dibujarCuadrado(i,100,"green");
+    //     i = i+50;
+    // }
 
-let i=0
+    for (let i=0; i<600; i= i+50){
+        dibujarCuadrado(i,0,"red");
+        dibujarCuadrado(i,50,"yellow");
+        dibujarCuadrado(i,100,"green");
 
-while(i<=600){
-    dibujarCuadrado(i,0,"green");
+    }
 
-    i =+50;
-
-}
 
 
 
